# Pal

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  muter.rs  playback.rs  rms.rs
src-tauri/src/credentials/: encryption.rs  keystore.rs  mod.rs
src-tauri/src/screen/: capture.rs
src-tauri/src/stt/: pipeline.rs
src-tauri/src/tts/: kokoro.rs  mod.rs  stream.rs
src/components/: FloatingPanel.tsx  GlassButton.tsx  ImagePreview.tsx  InputField.tsx  SkeletonLoader.tsx  TabBar.tsx  ToolIndicator.tsx  Waveform.tsx
src/components/ChatView/: ChatMessage.tsx  CodeBlock.tsx  ErrorBlock.tsx  MarkdownContent.tsx  ResponseArea.tsx  StreamingCursor.tsx
src/components/Lists/: RoutineList.tsx  SessionList.tsx  SkillList.tsx  TaskDetail.tsx  TaskList.tsx  ToolList.tsx
src/components/Notifications/: ToastProvider.tsx  useToast.ts
src/components/Settings/: AISettings.tsx  VoiceSettings.tsx
src/hooks/: useAppBootstrap.ts  useAutoScroll.ts  useStreamingAnimation.ts
src/services/ai/: agent-loop.ts  claude-service.ts  model-registry.ts  system-prompt.ts
src/services/ai/format-converters/: anthropic-to-openai.ts  index.ts
src/services/ai/stream-parsers/: anthropic-parser.ts  index.ts  openai-parser.ts
src/services/scheduler/: schedule-parser.ts
src/services/stores/: provider-store.ts  schedule-store.ts  session-store.ts  skill-store.ts  task-store.ts
src/services/tools/: bash-tool.ts  create-reminder-tool.ts  create-routine-tool.ts  delete-schedule-tool.ts  dismiss-tool.ts  edit-tool.ts  end-call-tool.ts  find-tool.ts  grep-tool.ts  list-schedules-tool.ts  ls-tool.ts  point-tool.ts  read-tool.ts  screenshot-tool.ts  skill-tool.ts  task-tool.ts  tool-registry.ts  web-fetch-tool.ts  web-search-tool.ts  write-tool.ts
src/services/tools/browser/: browser-manager.ts  browser-tool.ts  cdp-connection.ts
src/services/voice/: call-metrics.ts  call-session.ts  speech-service.ts  voice-service.ts
src/stores/: chatStore.ts  mascotStore.ts  panelStore.ts
src/types/: index.ts
