[package]
name = "tama-windows"
version = "0.1.0"
description = "Tama AI Assistant for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "tama_windows_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# `voice` enables whisper.cpp STT and Kokoro TTS. ON by default.
# Requires LLVM installed (libclang) on the build host for whisper-rs bindgen.
default = ["voice"]
voice = ["dep:whisper-rs", "dep:ort", "dep:ndarray"]
# Opt-out for environments without LLVM (e.g. a bare WSL dev box).
no-voice = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# HTTP (for model downloads, SSRF validation)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Image processing (screenshots)
image = "0.25"
base64 = "0.22"
xcap = "0.0.15"

# Encryption
chacha20poly1305 = "0.10"

# Audio capture/playback (works on Linux via ALSA, Windows via WASAPI)
cpal = "0.15"
ringbuf = "0.4"
rubato = "0.16"

# Regex for TTS text processing
regex = "1"

# STT — whisper.cpp Rust bindings (bundled ggml build via cc crate).
# Requires a C++ compiler + libclang on the build host.
# Gated behind the `voice` feature so WSL/Linux dev builds stay lean.
whisper-rs = { version = "0.13", default-features = false, optional = true }

# TTS — ONNX Runtime bindings for Kokoro inference.
# `download-binaries` fetches onnxruntime shared lib at build time.
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"], optional = true }
ndarray = { version = "0.16", optional = true }

# Windows Credential Manager for encryption key storage
[target.'cfg(target_os = "windows")'.dependencies]
keyring = "3"
